[package]
name = "tyuo"
version = "0.1.0"
authors = ["Neil Tallim <flan@uguu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"

serde_json = "1.0"

[dependencies.flate2]
    version="1.0.17"
    features=["zlib"]
    default-features=false

[dependencies.rusqlite]
    version="0.24.2"
    features=["bundled"]
