[package]
name = "tyuo"
version = "0.0.1"
authors = ["Neil Tallim <flan@uguu.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"

lazy_static = "1.4.0"

log = "0.4.0"
env_logger = "0.8.3"

serde_json = "1.0"

string-error = "0.1.0"

[dependencies.clap]
    version = "3.0.0-beta.2"
    default-features = false
    features = ["std"]

[dependencies.flate2]
    version = "1.0.20"
    features = ["zlib"]
    default-features = false

[dependencies.rusqlite]
    version = "0.24.2"
